Move module declaration

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 build/
+.idea/
 
 # Created by https://www.toptal.com/developers/gitignore/api/qt,qtcreator,visualstudiocode,qml,c++,cmake,clion,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=qt,qtcreator,visualstudiocode,qml,c++,cmake,clion,visualstudio
