Add Notifications model

--- a/src/YtDlp/CMakeLists.txt
+++ b/src/YtDlp/CMakeLists.txt
@@ -11,4 +11,5 @@ qt_add_qml_module(yt_dlp
         yt_dlp.cpp yt_dlp.h
         executable_worker.cpp executable_worker.h
         executable_controller.cpp executable_controller.h
+        notifications.cpp notifications.h
 )
